# InfiniCore

./: .gitignore  DEV.md  README.md  pyproject.toml  setup.py  xmake.lua
.github/workflows/: build.yml  ruff.yml
include/: infinicore.h  infinicore.hpp  infiniop.h
include/infinicore/: device.hpp  dtype.hpp  ops.hpp  tensor.hpp
include/infinicore/common/: hash.hpp
include/infinicore/context/: context.hpp
include/infinicore/nn/: embedding.hpp  linear.hpp  module.hpp  parameter.hpp  rmsnorm.hpp  rope.hpp
include/infinicore/op/: matmul.hpp  rearrange.hpp
include/infinicore/ops/: add.hpp  (+6 more)
python/infinicore/: __init__.py  device.py  dtype.py  ntops.py  tensor.py
scripts/: python_test.py  set_env_linux.sh
src/infiniccl/: infiniccl.cc
src/infiniccl-test/: infiniccl_test.cpp  main.cpp
src/infinicore/: device.cc  dtype.cc  infinicore.cc  tensor.cc  utils.hpp
src/infinicore-test/: README.md  main.cc  memory_test.cc  memory_test.h  test_nn_module.cc  test_nn_module.h  test_runner.h  test_tensor_destructor.cc  test_tensor_destructor.h
src/infiniop/: README.md  tensor_descriptor.cc
src/infinirt/: infinirt.cc
src/infinirt-test/: main.cc
src/utils/: check.h
test/infinicore/: debug.py  run.py  test.py
test/infiniop/: add.py  attention.py  causal_softmax.py  dequantize.py  dequantize_awq.py  equal.py  logsoftmax.py  ones.py  random_sample.py  rearrange.py  rms_norm.py  rope.py  rope_v2.py  sigmoid.py  silu.py  softplus.py  topkrouter.py  topksoftmax.py  where.py  zeros.py
xmake/: hygon.lua  iluvatar.lua  kunlun.lua  metax.lua  moore.lua  test.lua
(+264 files in other folders)
